// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textStylesPlugin should create data with custom keyName function 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
      export const fontFamily = {
        font1: "'Inter', Arial, sans-serif", // used weights: 400, 500, 600
font2: "'Roboto Mono', Arial, sans-serif", // used weights: 400
      };

      export const textVariants = {'body-500/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 400,
      lineHeight: 1.43,
      
  
      
    },'body-500/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-500/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-500/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-600/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-600/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 400,
      lineHeight: 1.33,
      
  
      
    },'body-600/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 400,
      lineHeight: 1.33,
      
  
      
    },'body-600/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-650/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.50,
      
  
      
    },'body-650/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'body-650/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'body-650/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.50,
      
  
      
    },'body-900/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 400,
      lineHeight: 1.60,
      
  
      
    },'body-900/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 400,
      lineHeight: 1.67,
      
  
      
    },'body-900/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 400,
      lineHeight: 1.67,
      
  
      
    },'body-900/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 400,
      lineHeight: 1.60,
      
  
      
    },'btn-200/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-250/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-400/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-450/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'caption-200/bs__extra': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.20000000298023224px',
  
      
    },'caption-200/lg__extra': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-200/md__extra': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-200/sm__extra': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.20000000298023224px',
  
      
    },'caption-250/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'input-600/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-650/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'nav-100/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'nav-100/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 2.00,
      
  
      
    },'nav-100/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'nav-100/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'title-800/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      lineHeight: 1.25,
      
  
      
    },'title-800/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 72,
      fontWeight: 600,
      lineHeight: 1.11,
      
  
      
    },'title-800/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 64,
      fontWeight: 600,
      lineHeight: 1.13,
      
  
      
    },'title-800/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 40,
      fontWeight: 600,
      lineHeight: 1.20,
      
  
      
    },'title-900/bs__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'title-900/lg__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 96,
      fontWeight: 600,
      lineHeight: 1.17,
      
  
      
    },'title-900/md__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 72,
      fontWeight: 600,
      lineHeight: 1.22,
      
  
      
    },'title-900/sm__extra': {
      
      fontFamily: fontFamily.font1,
      fontSize: 40,
      fontWeight: 600,
      lineHeight: 1.20,
      
  
      
    }};;
      
    "
`;

exports[`textStylesPlugin should write generated date with media queries 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
      export const fontFamily = {
        font1: "'Inter', Arial, sans-serif", // used weights: 400, 500, 600
font2: "'Roboto Mono', Arial, sans-serif", // used weights: 400
      };

      export const textVariants = {'body-500': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 400,
      lineHeight: 1.43,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
    }
    },'body-500-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 400,
      lineHeight: 1.43,
      
  
      
    },'body-500-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-500-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-500-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-600': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 400,
      lineHeight: 1.33,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 400,
      lineHeight: 1.33,
      
  
    }
    },'body-600-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-600-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 400,
      lineHeight: 1.33,
      
  
      
    },'body-600-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 400,
      lineHeight: 1.33,
      
  
      
    },'body-600-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-650': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.50,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.50,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
    }
    },'body-650-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.50,
      
  
      
    },'body-650-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'body-650-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'body-650-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.50,
      
  
      
    },'body-900': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 400,
      lineHeight: 1.60,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 400,
      lineHeight: 1.60,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 400,
      lineHeight: 1.67,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 400,
      lineHeight: 1.67,
      
  
    }
    },'body-900-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 400,
      lineHeight: 1.60,
      
  
      
    },'body-900-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 400,
      lineHeight: 1.67,
      
  
      
    },'body-900-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 400,
      lineHeight: 1.67,
      
  
      
    },'body-900-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 400,
      lineHeight: 1.60,
      
  
      
    },'btn-200': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
    }
    },'btn-200-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-250': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
    }
    },'btn-250-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-400': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
    }
    },'btn-400-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-450': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
    }
    },'btn-450-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
    }
    },'btn-500-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'caption-200': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.20000000298023224px',
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
    }
    },'caption-200-bs': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.20000000298023224px',
  
      
    },'caption-200-lg': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-200-md': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-200-sm': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.20000000298023224px',
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
    }
    },'caption-250-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.20000000298023224px',
  
      
    },'caption-250-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'input-600': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
    }
    },'input-600-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-650': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
    }
    },'input-650-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'nav-100': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 2.00,
      
  
    }
    },'nav-100-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'nav-100-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 2.00,
      
  
      
    },'nav-100-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'nav-100-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'title-800': {
      
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      lineHeight: 1.25,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 40,
      fontWeight: 600,
      lineHeight: 1.20,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 64,
      fontWeight: 600,
      lineHeight: 1.13,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 72,
      fontWeight: 600,
      lineHeight: 1.11,
      
  
    }
    },'title-800-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      lineHeight: 1.25,
      
  
      
    },'title-800-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 72,
      fontWeight: 600,
      lineHeight: 1.11,
      
  
      
    },'title-800-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 64,
      fontWeight: 600,
      lineHeight: 1.13,
      
  
      
    },'title-800-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 40,
      fontWeight: 600,
      lineHeight: 1.20,
      
  
      
    },'title-900': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      '@media (min-width: 680px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 40,
      fontWeight: 600,
      lineHeight: 1.20,
      
  
    },'@media (min-width: 1024px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 72,
      fontWeight: 600,
      lineHeight: 1.22,
      
  
    },'@media (min-width: 1440px)': {
        
      fontFamily: fontFamily.font1,
      fontSize: 96,
      fontWeight: 600,
      lineHeight: 1.17,
      
  
    }
    },'title-900-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'title-900-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 96,
      fontWeight: 600,
      lineHeight: 1.17,
      
  
      
    },'title-900-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 72,
      fontWeight: 600,
      lineHeight: 1.22,
      
  
      
    },'title-900-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 40,
      fontWeight: 600,
      lineHeight: 1.20,
      
  
      
    }};;
      
    "
`;

exports[`textStylesPlugin shouldn't create media queries styles because of responsive collection has no screen sizes 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
      export const fontFamily = {
        font1: "'Inter', Arial, sans-serif", // used weights: 400, 500, 600
font2: "'Roboto Mono', Arial, sans-serif", // used weights: 400
      };

      export const textVariants = {'body-500-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 400,
      lineHeight: 1.43,
      
  
      
    },'body-500-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-500-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-500-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-600-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-600-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 400,
      lineHeight: 1.33,
      
  
      
    },'body-600-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 400,
      lineHeight: 1.33,
      
  
      
    },'body-600-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'body-650-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.50,
      
  
      
    },'body-650-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'body-650-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'body-650-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.50,
      
  
      
    },'body-900-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 400,
      lineHeight: 1.60,
      
  
      
    },'body-900-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 400,
      lineHeight: 1.67,
      
  
      
    },'body-900-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 400,
      lineHeight: 1.67,
      
  
      
    },'body-900-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 400,
      lineHeight: 1.60,
      
  
      
    },'btn-200-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-200-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 500,
      lineHeight: 1.14,
      
  
      
    },'btn-250-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-250-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 14,
      fontWeight: 600,
      lineHeight: 1.14,
      
  
      
    },'btn-400-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-400-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.00,
      
  
      
    },'btn-450-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-450-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'btn-500-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'caption-200-bs': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.20000000298023224px',
  
      
    },'caption-200-lg': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-200-md': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-200-sm': {
      
      fontFamily: fontFamily.font2,
      fontSize: 12,
      fontWeight: 400,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.20000000298023224px',
  
      
    },'caption-250-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'caption-250-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 12,
      fontWeight: 600,
      lineHeight: 1.33,
      letterSpacing: '0.5px',
  
      
    },'input-600-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-600-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 400,
      lineHeight: 1.50,
      
  
      
    },'input-650-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'input-650-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 500,
      lineHeight: 1.50,
      
  
      
    },'nav-100-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 18,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'nav-100-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 16,
      fontWeight: 600,
      lineHeight: 2.00,
      
  
      
    },'nav-100-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'nav-100-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 20,
      fontWeight: 600,
      lineHeight: 1.00,
      
  
      
    },'title-800-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      lineHeight: 1.25,
      
  
      
    },'title-800-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 72,
      fontWeight: 600,
      lineHeight: 1.11,
      
  
      
    },'title-800-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 64,
      fontWeight: 600,
      lineHeight: 1.13,
      
  
      
    },'title-800-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 40,
      fontWeight: 600,
      lineHeight: 1.20,
      
  
      
    },'title-900-bs': {
      
      fontFamily: fontFamily.font1,
      fontSize: 24,
      fontWeight: 600,
      lineHeight: 1.33,
      
  
      
    },'title-900-lg': {
      
      fontFamily: fontFamily.font1,
      fontSize: 96,
      fontWeight: 600,
      lineHeight: 1.17,
      
  
      
    },'title-900-md': {
      
      fontFamily: fontFamily.font1,
      fontSize: 72,
      fontWeight: 600,
      lineHeight: 1.22,
      
  
      
    },'title-900-sm': {
      
      fontFamily: fontFamily.font1,
      fontSize: 40,
      fontWeight: 600,
      lineHeight: 1.20,
      
  
      
    }};;
      
    "
`;
